[package]
name = "bittorent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_bencode = "0.2.4"
indexmap = "2.1.0"
sha1_smol = "1.0.0"
sha256 = "1.5.0"
